--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -37,7 +37,7 @@
 	\subsection{Riferimenti}
 		\subsubsection{Normativi}
 		\begin{description}
-			\item \emph{\NdP};
+			\item \NdP;
 			\item[Capitolato d'appalto C6: \proj]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
 			\item[Regolamento del progetto didattico]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Dispense/L09.pdf};
 			\item[Vincoli di organigramma e dettagli tecnico-economici]\url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/PD01b.html}.
@@ -65,7 +65,7 @@
 
 	La scelta di un modello di sviluppo è cruciale per la corretta pianificazione delle attività. Da essa infatti si deriva tutta la struttura principale con cui saranno pianificati milestone e task.
 
-	Il progetto {\proj}, come affrontato nei documenti {\SdF} e {\PdQ}, presenta numerosi punti critici, analizzati nella sezione {\ref{sec:analisi}}, in particolare nella sezione {\ref{sec:tec}}, in cui sono analizzati i rischi tecnologici. Generalmente {\proj} richiede una intensiva fase di progettazione, il cui fine ultimo è l'esplorazione delle problematiche legate ai software \gloss{CASE} e alla loro risoluzione, tenendo conto del quantitativo di risorse assegnate al progetto. %[riferimento a verbale di riunione con zucchetti?]
+	Il progetto {\proj}, come affrontato nei documenti \emph{Studio di fattibilità} e \emph{Piano di Qualifica}, presenta numerosi punti critici, analizzati nella sezione {\ref{sec:analisi}}, in particolare nella sezione {\ref{sec:tec}}, in cui sono analizzati i rischi tecnologici. Generalmente {\proj} richiede una intensiva fase di progettazione, il cui fine ultimo è l'esplorazione delle problematiche legate ai software \gloss{CASE} e alla loro risoluzione, tenendo conto del quantitativo di risorse assegnate al progetto. %[riferimento a verbale di riunione con zucchetti?]
 
 	Un progetto dedito all'esplorazione va supportato con un adeguato modello di sviluppo; esso deve avere i seguenti requisiti:
 
@@ -213,7 +213,7 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item[Descrizione] le tecnologie adottate per sviluppare il prodotto sono solamente in parte note ai componenti del gruppo e ciò non toglie che vi possano essere delle mancanze;
 			\item[Probabilità di occorrenza] media;
 			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] il \R{} ha il compito di verificare il grado di conoscenza e preparazione di ciascun componente relativo alle tecnologie adottate;
+			\item[Riconoscimento] il \Rx{} ha il compito di verificare il grado di conoscenza e preparazione di ciascun componente relativo alle tecnologie adottate;
 			\item[Trattamento] ciascun componente si impegnerà a documentarsi in maniera autonoma sulle tecnologie adottate;
 			\item[Attuazione nel periodo]:
 			 \begin{description}
@@ -238,8 +238,8 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item[Descrizione] i componenti del gruppo sono alle prime esperienze nello sviluppo di progetti dove il numero di partecipanti è alto. Tale fattore potrebbe causare problemi quali incomprensioni tra i membri del gruppo e dissidi, generando quindi un clima non proficuo;
 			\item[Probabilità di occorrenza] bassa;
 			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] il \R{} deve monitorare lo stato di collaborazione fra i vari componenti del gruppo durante le varie fasi e capire dove stia eventualmente nascendo un dissidio fra uno o più membri;
-			\item[Trattamento] il \R{} provvederà, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un ambiente di lavoro il meno stressante possibile;
+			\item[Riconoscimento] il \Rx{} deve monitorare lo stato di collaborazione fra i vari componenti del gruppo durante le varie fasi e capire dove stia eventualmente nascendo un dissidio fra uno o più membri;
+			\item[Trattamento] il \Rx{} provvederà, in caso di contrasti tra membri del gruppo, ad affidare alle persone coinvolte attività che non li faccia collaborare assieme, cercando di riportare sempre la sintonia all'interno del gruppo per avere un ambiente di lavoro il meno stressante possibile;
 			\item[Attuazione nel periodo]:
 			\begin{description}
 				\item[Analisi dei requisiti] il rischio non si è mai verificato.
@@ -250,8 +250,8 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item[Descrizione] ciascun componente del gruppo ha impegni personali e necessità proprie. Questo implica la possibilità che qualche componente del \gloss{team} non sia disponibile in certi momenti.
 			\item[Probabilità di occorrenza] media;
 			\item[Grado di pericolosità] medio;
-			\item[Riconoscimento] per creare un calendario sincronizzato e condiviso del gruppo, è necessario che vengano notificati al \R{} in maniera preventiva e tempestiva gli impegni di ognuno;
-			\item[Trattamento] ad ogni impegno notificato, il \R{} si prenderà la responsabilità di eseguire una nuova parte di pianificazione del periodo problematico; 
+			\item[Riconoscimento] per creare un calendario sincronizzato e condiviso del gruppo, è necessario che vengano notificati al \Rx{} in maniera preventiva e tempestiva gli impegni di ognuno;
+			\item[Trattamento] ad ogni impegno notificato, il \Rx{} si prenderà la responsabilità di eseguire una nuova parte di pianificazione del periodo problematico; 
 			\item[Attuazione nel periodo]:
 			\begin{description}
 				\item[Analisi dei requisiti] il rischio si è verificato un paio di volte a due membri del gruppo per problemi personali; nonostante ciò, il lavoro è stato portato al termine e non ci sono stati rallentamenti.
@@ -262,8 +262,8 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item[Descrizione] l'approccio al metodo di lavoro risulta nuovo e sono richieste capacità di pianificazione e di analisi che il gruppo non possiede a causa dell'inesperienza. Inoltre, alcune conoscenze richieste, necessitano di un po' di tempo per poter essere apprese;
 			\item[Probabilità di occorrenza] alta;
 			\item[Grado di pericolosità] alto;
-			\item[Riconoscimento] quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al \R{} che, una volta approvatone l'utilizzo nel progetto, demanderà al gruppo il compito di documentarsi su come 	impiegarlo al meglio;
-			\item[Trattamento] ogni membro del gruppo si impegna a studiare il materiale necessario per l'utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse sufficiente, il \R{} dovrà preparare un piano di studi per compensare ogni tipo di lacuna;
+			\item[Riconoscimento] quando un componente del gruppo ritiene opportuno utilizzare una nuova tecnologia, deve segnalarlo al \Rx{} che, una volta approvatone l'utilizzo nel progetto, demanderà al gruppo il compito di documentarsi su come 	impiegarlo al meglio;
+			\item[Trattamento] ogni membro del gruppo si impegna a studiare il materiale necessario per l'utilizzo di tecnologie e strumenti richiesti durante lo svolgimento del progetto. Nel caso in cui questo non fosse sufficiente, il \Rx{} dovrà preparare un piano di studi per compensare ogni tipo di lacuna;
 			\item[Attuazione nel periodo]:
 			\begin{description}
 				\item[Analisi dei requisiti]  il rischio si è verificato soprattutto nella prima fase.
@@ -301,7 +301,7 @@ Per ogni rischio viene fornito un elenco di informazioni, necessario per compren
 			\item[Descrizione] è possibile che i tempi delle attività pianificate per lo svolgimento del progetto siano sovrastimate o sottostimate. Un valutazione errata di queste, può comportare una variazione sul costo preventivo presentato; 
 			\item[Probabilità di occorrenza] media;
 			\item[Grado di pericolosità] medio;
-			\item[Riconoscimento] quando un'attività occupa più tempo di quello previsto significa che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, significa che è stata sovrastimata. É necessario quindi che il \R{} monitori con grande attenzione il programma di \emph{project management} e che faccia tempestive modiche alla pianificazione e al rendiconto dei costi; 
+			\item[Riconoscimento] quando un'attività occupa più tempo di quello previsto significa che è stata sottostimata. Viceversa, quando invece ne occupa considerevolmente meno, significa che è stata sovrastimata. É necessario quindi che il \Rx{} monitori con grande attenzione il programma di \emph{project management} e che faccia tempestive modiche alla pianificazione e al rendiconto dei costi; 
 			\item[Trattamento] è necessario che ogni membro del gruppo rispetti i tempi delle attività assegnatogli; 
 			\item[Attuazione nel periodo]:
 			\begin{description}
@@ -348,11 +348,11 @@ I diagrammi presentano una visualizzazione ridotta e a volte su più pagine per 
 	\\ Questo periodo inizia successivamente alla formazione del gruppo e finisce in corrispondenza della consegna dei documenti per la \emph{Revisione dei Requisiti}.
 	Questo perido prevede che vengano stilati i seguenti documenti:
 	\begin{description}
-		\item[Norme di Progetto] in questo documento sono inserite tutte le norme che il \gloss{team} dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\AM{}, mentre il \V{} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
+		\item[Norme di Progetto] in questo documento sono inserite tutte le norme che il \gloss{team} dovrà seguire e rispettare durante l'intero svolgimento delle attività. Tale documento è redatto dall'\AMx{}, mentre il \Vx{} ha il compito di certificare che tali norme siano state rispettate da tutto il gruppo;
 		\item[Studio di Fattibilità] in questo documento vengono analizzati i vari capitolati proposti. Per ogni capitolato, è stato analizzato il dominio applicativo/tecnologico e sono state inserite delle considerazioni in merito agli aspetti positivi e negativi;
 		\item[Analisi dei requisiti] in questo documento sono raccolti tutti i requisiti progettuali necessari per comprendere più approfonditamente	il capitolato scelto con lo \emph{Studio di Fattibilità};
 		\item[Piano di Progetto] questo documento è redatto dal \emph{Responsibile di Progetto} che organizza tutte le attività e stima le risorse, costi e tempi necessari per lo svolgimento del progetto;
-		\item[Piano di Qualifica] questo documento è redatto dal \V{} che individua tutte le strategie di verifica e validazione che il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
+		\item[Piano di Qualifica] questo documento è redatto dal \Vx{} che individua tutte le strategie di verifica e validazione che il \gloss{team} deve adottare per il progetto per ottenere e consegnare un prodotto di qualità;
 		\item[Glossario] questo documento viene steso da tutti i redattori in parallelo alla stesura degli altri documenti; esso contiene la spiegazione di alcuni termini presenti nei vari documenti al fine di chiarire il significato del termine stesso;
 		\item[Lettera di presentazione] questo documento viene presentato al committente al fine di mostrare l'interesse del gruppo di partecipare alla gara d'appalto.
 	\end{description}
@@ -375,7 +375,7 @@ I diagrammi presentano una visualizzazione ridotta e a volte su più pagine per 
 
 Note:
 \begin{itemize}
-\item l'attività \emph{Redazione Analisi dei Requisiti} ha una dipendenza verso l'attività \emph{PragmaDB} appartenente all'attività \emph{Database tracciamento requisiti};
+\item l'attività \emph{Redazione Analisi dei Requisiti} ha una dipendenza verso l'attività \gloss{PragmaDB} appartenente all'attività \emph{Database tracciamento requisiti};
 \item le attività \emph{Redazione Piano di Progetto}, \emph{Redazione Piano di Qualifica} e \emph{Redazione Analisi dei Requisiti} hanno una dipendenza verso l'attività \emph{Redazione Studio di Fattibilità}.
 \end{itemize} 
 \end{figure}
@@ -1322,75 +1322,68 @@ Questo ha portato un ritardo complessivo pari a 3 giorni rispetto alla \gloss{ba
 \pagebreak
 \section{Organigramma}	\label{sec:organigramma}
 \subsection{Redazione}
-\begin{table}[htbp]
-	\begin{center}
-		\setlength{\extrarowheight}{\jot}
-		\begin{tabular}{|c|c|p{5cm}|}
+
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+  \begin{tabular}{ | c | c | c |}
 			\hline
-			\textbf{Nominativo} & \textbf{Data di redazione} & \textbf{Firma} \\[1ex]
+			\textbf{Nominativo} & \textbf{Data di redazione} & \textbf{Firma} \\
 			\hline
-			\LB & 25-12-2016 %& \myincludegraphics{path firma}
-			 \\[1ex]
+			\LB & 25-12-2016 &   \myincludegraphics{img/firmalb.jpg}\\
 			\hline
-		\end{tabular}
-	\end{center}
-	\caption{Redazione}
-\end{table}
+  \end{tabular}
+}
+\caption{Redazione}
+\end{figure}
 
 \subsection{Approvazione}
-\begin{table}[htbp]
-	\begin{center}
-		\setlength{\extrarowheight}{\jot}
-		\begin{tabular}{|c|c|p{5cm}|}
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+  \begin{tabular}{ | c | c | c |}
 			\hline
-			\textbf{Nominativo}     & \textbf{Data di approvazione} & \textbf{Firma}  \\[1ex]
+			\textbf{Nominativo}     & \textbf{Data di approvazione} & \textbf{Firma}  \\
 			\hline
-			\LB		& 24-01-2017					%& \myincludegraphics{path firma}			
-			\\[1ex]
+			\LB		& 24-01-2017	&  \myincludegraphics{img/firmalb.jpg}	\\
 			\hline
-			\TV	&								&			\\[1ex]
+			\TV	          &		           &			\\
 			\hline
-		\end{tabular}
-	\end{center}
-	\caption{Approvazione}
-\end{table}
+\end{tabular}
+}
+\caption{Approvazione}
+\end{figure}
 
 \subsection{Accettazione dei componenti}
-\begin{table}[htbp]
-	\begin{center}
-		\setlength{\extrarowheight}{\jot}
-		\begin{tabular}{|c|p{3.5cm}|p{6cm}|}
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+  \begin{tabular}{ | c | c | c |}
 			\hline
-			\textbf{Nominativo} & \textbf{Data di accettazione} & \textbf{Firma} \\[1ex]
+			\textbf{Nominativo} & \textbf{Data} & \textbf{Firma} \\
 			\hline
-			\AZ	&	24-01-2017	%& \myincludegraphics{path firma}	
-			\\[1ex]
+			\AZ		&	24-01-2017	&  \myincludegraphics{img/firmaaz.jpg}	\\
 			\hline
-			\GG		&	24-01-2017	%& \myincludegraphics{path firma}		
-			\\[1ex]
+			\GG		&	24-01-2017   &  \myincludegraphics[scale=0.75]{img/firmagg.png}	\\
 			\hline
-			\LB		&	24-01-2017	%& \myincludegraphics{path firma}		
-			\\[1ex]
+			\LB		&	24-01-2017	&  \myincludegraphics{img/firmalb.jpg}		\\
 			\hline
-			\LS		&	24-01-2017	%& \myincludegraphics{path firma}		
-			\\[1ex]
+			\LS		&	24-01-2017	&  \myincludegraphics{img/firmals.jpg}		\\
 			\hline
-			\MM		&	24-01-2017	%& \myincludegraphics{path firma}		
-			\\[1ex]
+			\MM		&	24-01-2017	&  \myincludegraphics{img/firmamm.png}		\\
 			\hline
-			\PB		&	24-01-2017	%& \myincludegraphics{path firma}		
-			\\[1ex]
+			\PB		&	24-01-2017	&  \myincludegraphics{img/firmapb.png}		\\
 			\hline
-		\end{tabular}
-	\end{center}
-	\caption{Accettazione}
-\end{table}
+\end{tabular}
+}
+\caption{Accettazione}
+\end{figure}
 
 \subsection{Componenti}
-\begin{table}[H]
-	\begin{center}
-		\setlength{\extrarowheight}{\jot}
-		\begin{tabular}{|c|c|p{6cm}|p{4.3cm}|}
+\begin{figure}[H]
+\makebox[\textwidth][c]
+{
+  \begin{tabular}{ | c | c | c | c |}
 			\hline
 			\textbf{Nominativo} & \textbf{Matricola} & \raggedright \textbf{Indirizzo di posta elettronica} & \textbf{Ruoli} \\[1ex]
 			\hline
@@ -1406,9 +1399,9 @@ Questo ha portato un ritardo complessivo pari a 3 giorni rispetto alla \gloss{ba
 			\hline
 			\PB		& 1097928	& \href{mailto:paolo.baracco.1@studenti.unipd.it}{paolo.baracco.1@studenti.unipd.it} 	&  \AN, \R, \V 	\\[1ex]
 			\hline
-		\end{tabular}
-	\end{center}
-	\caption{Componenti}
-\end{table}
+\end{tabular}
+}
+\caption{Componenti}
+\end{figure}
 
 \end{document}
