--- a/doc/Esterni/Piano_di_progetto/diario.tex
+++ b/doc/Esterni/Piano_di_progetto/diario.tex
@@ -2,7 +2,9 @@
 % da includere con \include{diario}
 
 \begin{diario}
-	0.0.6 & {\PB} Responsabile & 05/12/2016 &  Stesura Preventivo di Periodo  \\ \hline
+	0.0.6 & {\PB} Responsabile & 07/12/2016 &  Stesura Organigramma  \\ \hline
+	0.0.6 & {\LB} Responsabile & 06/12/2016 &  Stesura Consuntivo di Periodo  \\ \hline
+	0.0.6 & {\LB} Responsabile & 05/12/2016 &  Stesura Preventivo di Periodo  \\ \hline
 	0.0.6 & {\LB} Responsabile & 05/12/2016 &  Inserimento Gantt Diagrammi delle Attività  \\ \hline
 	0.0.5 & {\PB} Responsabile & 29/12/2016 &  Stesura Pianificazione delle Attività  \\ \hline
 	0.0.4 & {\PB} Responsabile & 28/12/2016 &  Stesura Introduzione  \\ \hline
