--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_v_0_0_5.tex
@@ -329,6 +329,8 @@ I diagrammi presentano una visualizzazione ridotta e a volte su più pagine per 
 \includegraphics[width=1.2\textwidth]{img/ganttweeks1.png}}
 \label{tab:genweeks}
 \caption{\gloss{Diagramma di Gantt} della pianificazione generale, in settimane (parte 1)}
+
+Nota: la "dipendenza all'indietro" che sembra esistere tra \emph{Redazione Norme di Progetto} e \emph{Redazione Studio di Fattibilità} non esiste (vedi prossimi diagrammi in giorni).
 \end{figure}
 
 
@@ -1122,7 +1124,8 @@ Questo quadro riassuntivo include il periodo di {\AR}, il quale \textbf{non è a
 
 
 
-\subsection{Ore rendicontate del progetto}
+\subsection{Ore rendicontate del progetto} 
+\label{sec:orerend}
 %stessa cosa della sezione precedente
 Di seguito si riporta la divisione oraria pianificata generale delle sole ore rendicontate.
 
@@ -1317,7 +1320,8 @@ Questo ha portato un ritardo complessivo pari a 3 giorni rispetto alla \gloss{ba
 \caption{Tabella costo effettivo {\AR} per ruolo e per persona, valori in euro (\euro).}
 \end{figure}
 
-
+\subsubsection{Preventivo a finire}
+Siccome non sono state rilevate variazioni nei costi, il preventivo a finire (a carico del cliente) è pari a quelle riportate nella sezione \ref{sec:orerend} \nameref{sec:orerend}.
 
 \pagebreak
 \section{Organigramma}	\label{sec:organigramma}
