verifica del PdQ

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -11,9 +11,6 @@
 \dest{\TV, \ZU}
 \title{Piano di Qualifica}
 
-\usepackage{hyperref}
-\hypersetup{hidelinks}
-
 \begin{document}
 \maketitle
 \include{diario}
@@ -64,7 +61,7 @@
 \section{Visione generale della strategia di gestione della qualità}
 	\subsection{Obiettivi di qualità}
 	In questa sezione vengono illustrati in modo quanto più completo ed esaustivo gli obiettivi di qualità che il \gloss{team} intende perseguire nel corso 	dello svolgimento del progetto, opportunamente declinati nelle due sottosezioni Qualità di processo e Qualità di prodotto.
-	\\Ogni obiettivo di qualità in seguito riportato risulta associato ad un identificativo univoco in modo tale da rendere possibile un efficacie 				tracciamento fra l'obiettivo di qualità da soddisfare e la metrica scelta allo scopo di verificarne il soddisfacimento.
+	\\Ogni obiettivo di qualità in seguito riportato risulta associato ad un identificativo univoco in modo tale da rendere possibile un efficace 				tracciamento fra l'obiettivo di qualità da soddisfare e la metrica scelta allo scopo di verificarne il soddisfacimento.
 
 	\subsection{Qualità di processo}
 	È indubbio che la qualità di un prodotto software non possa in alcun modo prescindere dalla qualità dei diversi processi che concorrono nel definirlo e 	che anzi ne sia intrinsecamente dipendente. Con tale consapevolezza il gruppo ha scelto come riferimento per la valutazione della qualità dei propri 		processi lo standard ISO/IEC 15504 altresì conosciuto sotto l'acronimo di \gloss{SPICE}.
@@ -77,7 +74,7 @@
 			\begin{itemize}
 				\item \emph{Esecuzione del Processo:} la misura in cui il processo raggiunge i propri obiettivi trasformando   prodotti in ingresso 						identificabili in prodotti in uscita identificabili.
 			\end{itemize}
-		\item \textbf{Livello 2: Gestito}il processo è gestito e i suoi prodotti sono stabiliti, controllati e manutenuti; le attività sono pianificate e 			controllate e il loro svolgimento risulta documentato.
+		\item \textbf{Livello 2: Gestito} il processo è gestito e i suoi prodotti sono stabiliti, controllati e manutenuti; le attività sono pianificate e 			controllate e il loro svolgimento risulta documentato.
 		I relativi attributi di processo:
 			\begin{itemize}
 				\item \emph{Gestione delle Prestazioni:} la misura in cui il processo produce un risultato coerente con gli obiettivi attesi.
@@ -116,7 +113,7 @@
 
 	Le misurazioni e le valutazioni risultanti dal monitoraggio dei diversi processi sono usate nel contesto di una strategia di miglioramento continuo della qualità, realizzata attraverso il ciclo \gloss{PDCA}.
 	\\Il ciclo \gloss{PDCA}, altresì noto come ciclo di Deming, definisce un'organizzazione interna dei processi incentrata sul principio del miglioramento continuo allo scopo di renderli automigliorativi.
-	\\Le fasi in cui esso si articola sono 4:
+	\\Le fasi in cui esso si articola sono quattro:
 		\begin{itemize}
 			\item \textbf{Pianificare (Plan):} in tale fase vengono definite attività, scadenze, responsabilità, risorse utili a raggiungere specifici obiettivi di miglioramento opportunamente pianificati.
 			\item \textbf{Eseguire (Do):} in questa fase vengono attuate le azioni migliorative pianificate al passo precedente. Si procede inoltre ad eseguire misurazioni e raccogliere dati utili per le successive fasi di analisi e controllo.
@@ -126,7 +123,7 @@
 
 		\subsubsection{Procedure per il controllo della qualità di processo}
 		L'adozione dello standard \gloss{SPICE}, in combinazione con l'approccio automigliorativo del ciclo \gloss{PDCA}, è alla base della strategia prevista del gruppo per garantire una sempre maggiore qualità dei processi in atto e dei prodotti risultanti.
-		\\Il documento \PdP stabilisce gli obiettivi del gruppo in relazione alla pianificazione in dettaglio dei vari processi e alla ripartizione delle risorse ad essi assegnate per un efficacie svolgimento. Altri obiettivi di qualità sono illustrati successivamente in questo documento.
+		\\Il documento \PdP{} stabilisce gli obiettivi del gruppo in relazione alla pianificazione in dettaglio dei vari processi e alla ripartizione delle risorse ad essi assegnate per un efficace svolgimento. Altri obiettivi di qualità sono illustrati successivamente in questo documento.
 		\\Le metriche utilizzate dal gruppo per valutare la qualità dei processi, commisurarla agli obiettivi stabiliti e stabilire eventuali azioni correttive di miglioramento sono definiti in dettaglio nella sezione \ref{S5} del seguente documento. Da sottolineare che anche le metriche relative alla qualità del prodotto software costituiscono un'indicazione preziosa per valutare la qualità dei processi in atto: infatti un prodotto di bassa qualità è indicativo di un processo da migliorarsi.
 
 		\subsubsection{Obiettivi di qualità di processo}
@@ -136,7 +133,7 @@
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Rispetto della pianificazione}
-				Ogni attività di un processo verrà svolta da parte di colui a cui è stata assegnata, rispettando la pianificazione temporale stabilita nel documento \PdP e svolgendo tutti i compiti in cui essa si articola.
+				Ogni attività di un processo verrà svolta da parte di colui a cui è stata assegnata, rispettando la pianificazione temporale stabilita nel documento \PdP{} e svolgendo tutti i compiti in cui essa si articola.
 				\subparagraph{Rispetto del budget}
 				I costi di ogni processo dovranno rientrare nel budget previsto dal documento \PdP.
 				
@@ -223,10 +220,10 @@
 		\subsubsection{Obiettivi di qualità del prodotto}
 		Gli obiettivi di qualità del software che il gruppo \hx{} desidera raggiungere nell'arco del progetto sono un sottoinsieme di quelli enunciati nello standard ISO/IEC 9126:2001:
 		\begin{itemize}
-			\item il prodotto possiede le funzionalità descritte all'interno dei requisiti obbligatori e gran parte di funzionalità descritte all'interno dei requisiti desiderabili - Sezione \ref{S1};
-			\item il prodotto è testato negli aspetti più importanti e in determinate situazioni nelle quali esso si può trovare - Sezione \ref{S2};
-			\item il prodotto presenta codice senza elevati gradi di complessità relativamente ad alcuni vincoli definiti – Sezione \ref{S3};
-			\item il codice risulta manutenibile e facilmente comprensibile – Sezione \ref{S4};
+			\item il prodotto possiede le funzionalità descritte all'interno dei requisiti obbligatori e gran parte di funzionalità descritte all'interno dei requisiti desiderabili --- Sezione \ref{S1};
+			\item il prodotto è testato negli aspetti più importanti e in determinate situazioni nelle quali esso si può trovare --- Sezione \ref{S2};
+			\item il prodotto presenta codice senza elevati gradi di complessità relativamente ad alcuni vincoli definiti –-- Sezione \ref{S3};
+			\item il codice risulta manutenibile e facilmente comprensibile –-- Sezione \ref{S4};
 		\end{itemize}
 	\subsection{Scadenze temporali}
 	Le scadenze temporali stabilite dal gruppo sono definite in dettaglio nel documento \PdP.
@@ -236,7 +233,7 @@
 		\subsubsection{Risorse necessarie}
 		Per svolgere al meglio il processo di verifica saranno necessarie le seguenti risorse umane, hardware e software:
 			\paragraph{Risorse umane}
-			I ruoli di progetto coinvolti a pieno titolo nel processo di verifica sono il Responsabile di Progetto e i Verificatori. Per quanto riguarda una descrizione più dettagliata delle relative responsabilità, fare riferimento al documento \NdP .
+			I ruoli di progetto coinvolti a pieno titolo nel processo di verifica sono il Responsabile di Progetto e i Verificatori. Per quanto riguarda una descrizione più dettagliata delle relative responsabilità, fare riferimento al documento \NdP.
 			\paragraph{Risorse hardware}
 			  È necessario avere a disposizione calcolatori dotati di sufficiente potenza di calcolo, in grado di connettersi alla rete internet e con installati gli strumenti software indispensabili per lo svolgimento di verifica (come individuati nelle \NdP).
 			\paragraph{Risorse software}
