--- a/doc/util/hx-vers.sty
+++ b/doc/util/hx-vers.sty
@@ -2,10 +2,10 @@
 % da usare tramite il comando \input{../../util/hx-vers}
 % da aggiornare con il comando ./versioni.sh (dalla cartella doc)
 
-\newcommand{\NdP}{\emph{Norme\_di\_progetto\_0\_0\_5 - Revisione.pdf}}
+\newcommand{\NdP}{\emph{Norme\_di\_progetto\_0\_0\_5.pdf}}
 \newcommand{\Verbali}{\emph{Verbali.pdf}}
 \newcommand{\AdR}{\emph{Analisi\_dei\_requisiti\_0\_0\_0.pdf}}
 \newcommand{\SdF}{\emph{Studio\_di\_fattibilita\_0\_0\_0.pdf}}
-\newcommand{\PdP}{\emph{Piano\_di\_progetto\_v\_0\_0\_5.pdf}}
+\newcommand{\PdP}{\emph{Piano\_di\_progetto\_0\_0\_5.pdf}}
 \newcommand{\PdQ}{\emph{Piano\_di\_qualifica\_0\_0\_0.pdf}}
 \newcommand{\Glossario}{\emph{Glossario\_0\_0\_2.pdf}}
