finita verifica del PdQ

--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_0_0_0.tex
@@ -336,7 +336,7 @@
 					\item Range di accettazione: 90-100;
 				\end{itemize}
 				
-			\paragraph{Indice Gulpease}
+			\paragraph{Indice di Gulpease}
 			Tale metrica, tarata sulla lingua italiana, misura la qualità di un documento andando a stimarne il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe – cosa che ne consente una implementazione automatizzata fortemente affidabile. Tale indice, inoltre, considera principalmente due variabili linguistiche: la lunghezza delle parole e la lunghezza delle frasi in rapporto al numero delle lettere.
 			\\La formula per il calcolo dell'indice di \gloss{Gulpease} è la seguente:
 				\begin{equation}
@@ -420,7 +420,7 @@
 				\item Range di accettazione: 0-10;
 			\end{itemize}
 		\subsubsection{Manutenibilità \label{S4}}
-		Per garantire un elevato grado di manutenibilità, si è deciso adottare un discreto numero di metriche che spaziano su diversi aspetti del programma.
+		Per garantire un elevato grado di manutenibilità, si è deciso di adottare un discreto numero di metriche che spaziano su diversi aspetti del programma.
 			\paragraph{Numero di statement per metodo}
 			Tale metrica è una misura del numero di statement di un particolare metodo. Avere un numero di statement per metodo relativamente basso permette di tenere un livello di manutenibilità del codice accettabile.
 			\\I range stabiliti per la metrica sono i seguenti:
@@ -482,7 +482,7 @@
 			La metrica è una misura della dimensione media di una particolare unità in termini di linee di codice. Avere unità di grandi dimensioni rende infatti difficoltosa la manutenibilità e la comprensibilità del codice.
 			\\La misura viene effettuata nel modo seguente:
 			\begin{equation}
-				\frac{\sum(numero~linee~di~codice~dell'~unità~i)}{numero~totale~di~unità}
+				\frac{\sum(numero~linee~di~codice~dell'unità~i)}{numero~totale~di~unità}
 			\end{equation}
 			I range stabiliti per la metrica sono i seguenti:
 			\begin{itemize}
