rev PdQ; ora si legge tutta la tabella

--- a/doc/Esterni/Piano_di_qualifica/revisione_PdQ.tex
+++ b/doc/Esterni/Piano_di_qualifica/revisione_PdQ.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english,italian]{babel}
 \usepackage{microtype}
+\usepackage{longtable}
 \usepackage{hyperref}
 \usepackage{../../util/hx-macro}
 \title{Revisione PdQ}
@@ -12,10 +13,10 @@
 \maketitle
 
 \paragraph{}
-Mi mancano da leggere le ultime otto pagine. Intanto, in tabella trovate le correzioni che consiglierei di apportare. Invece ho corretto gli errori di battitura “banali” direttamente nel file sorgente.
+In tabella trovate le correzioni che consiglierei di apportare. Invece ho corretto gli errori di battitura “banali” direttamente nel file sorgente.
 
-\begin{table}
-\begin{tabular}{| p{3cm} | p{10cm} |}
+\paragraph{}
+\begin{longtable}{| p{3cm} | p{10cm} |}
 	\hline
 	\textbf{sezione del testo} & \textbf{correzione} \\ \hline
 	\hline
@@ -44,8 +45,7 @@ Mi mancano da leggere le ultime otto pagine. Intanto, in tabella trovate le corr
 	“Validazione W3C” & Dobbiamo ricordarci di mettere “W3C” nel glossario e magari aggiungere il sito nei riferimenti a inizio documento. \\ \hline
 	“Tipi di test” & La “più piccola parte di lavoro prodotta da un programmatore” potrebbe essere il singolo carattere; forse è meglio “la più piccola parte di lavoro che conviene verificare” (più o meno come nelle slide del prof.). Inoltre, unità non potrebbe essere anche una singola classe, sufficientemente piccola? \\ \hline
 	“Tipi di test” & \emph{Prodotto} non è in glossario. \\ \hline
-\end{tabular}
-\end{table}
+\end{longtable}
 
 \paragraph{}
 Osservazioni generali:
